<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fyp.inrestaurant.Register">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/deepTeal"
        app:title="@string/rgstrTitle"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/activity_vertical_margin">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/uNameTxtVw"
            android:layout_column="0"
            android:layout_row="1"/>
        <EditText
            android:id="@+id/uNameReg"
            android:layout_height="wrap_content"
            android:layout_width="240dp"
            android:inputType="text"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/uEmail"
            android:layout_column="0"
            android:layout_row="2"/>
        <EditText
            android:id="@+id/uEmailReg"
            android:layout_height="wrap_content"
            android:layout_width="240dp"
            android:inputType="textEmailAddress"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/uPwordTxtVw"
            android:layout_column="0"
            android:layout_row="3"/>
        <EditText
            android:id="@+id/uPwordReg"
            android:layout_height="wrap_content"
            android:layout_width="240dp"
            android:inputType="textPassword"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/uPword2TxtVw"
            android:layout_column="0"
            android:layout_row="4"/>
        <EditText
            android:id="@+id/uPword2Reg"
            android:layout_height="wrap_content"
            android:layout_width="240dp"
            android:inputType="textPassword"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"/>
        <Button
            android:id="@+id/submitReg"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/submitBttn"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="5"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
    </GridLayout>

</LinearLayout>
