<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="fyp.inrestaurant.About">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:showAsAction="always"
        android:background="@color/deepTeal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar2">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_information"
                android:textSize="20sp"
                android:layout_margin="@dimen/card_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cheese_ipsum"
                android:layout_margin="@dimen/card_margin"
                android:paddingTop="45dp"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_details"
                    android:textSize="20sp"
                    android:layout_marginBottom="15dp"
                    android:layout_margin="@dimen/card_margin"/>
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/callicon"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="left|center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_016_8717908"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="-100dp"
                    android:layout_marginStart="-100dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/emailicon"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="2dp"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hofookeng_uca_gmail_com"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="-100dp"
                    android:layout_marginStart="-100dp"/>
            </GridLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
