<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context="fyp.inrestaurant.About">
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/ViewProfileToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:showAsAction="always"
                android:background="@color/deepTeal"/>
        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/anchor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/ViewProfileToolbar"
                android:paddingTop="24dp">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">
                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="6dp"
                        android:columnCount="2"
                        android:rowCount="3">
                        <!--Username-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/card_margin"
                            android:text="Username"
                            android:layout_column="0"
                            android:layout_row="0"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/card_margin"
                            android:id="@+id/profileUName"
                            android:layout_column="1"
                            android:layout_row="0"
                            android:enabled="false"
                            android:inputType="text"
                            android:layout_gravity="fill_horizontal|left" />

                        <!--Email-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-8dp"
                            android:layout_margin="@dimen/card_margin"
                            android:text="@string/email"
                            android:layout_column="0"
                            android:layout_row="1" />
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-8dp"
                            android:layout_margin="@dimen/card_margin"
                            android:id="@+id/profileUEmail"
                            android:layout_column="1"
                            android:layout_row="1"
                            android:enabled="false"
                            android:inputType="textEmailAddress"
                            android:layout_gravity="fill_horizontal|start"/>
                        <!--Points-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/card_margin"
                            android:text="@string/points"
                            android:layout_column="0"
                            android:layout_row="2"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/card_margin"
                            android:id="@+id/profileUPoints"
                            android:layout_column="1"
                            android:layout_row="2"/>
                    </GridLayout>
                </android.support.v7.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    style="?attr/buttonBarButtonStyle">

                    <Spinner
                        android:id="@+id/points"
                        android:spinnerMode="dropdown"
                        android:dropDownVerticalOffset="40dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/points_redeem"
                        android:background="@color/deepTeal"
                        android:popupBackground="@color/lightTeal"/>

                    <Button
                        android:padding="@dimen/card_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pointRedeem"
                        android:text="@string/redeem_your_points"
                        android:layout_gravity="center_horizontal"/>

                    <LinearLayout
                        android:layout_marginTop="@dimen/card_margin"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_margin="@dimen/card_margin"
                                    android:id="@+id/redeemString"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="@string/coupon"/>
                                <TextView
                                    android:id="@+id/valueRedeem"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="@string/coupon_value"
                                    android:layout_alignTop="@+id/redeemString"
                                    android:layout_centerHorizontal="true"/>
                                <TextView
                                    android:layout_margin="@dimen/card_margin"
                                    android:layout_height="wrap_content"
                                    android:layout_width="wrap_content"
                                    android:text="@string/expiry_date"
                                    android:layout_alignParentRight="true"
                                    android:layout_alignParentEnd="true"/>
                            </RelativeLayout>
                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/voucherRecycl"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipToPadding="false"
                            android:scrollbars="vertical">
                        </android.support.v7.widget.RecyclerView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/infNav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/sidebar_menu"/>
</android.support.v4.widget.DrawerLayout>